[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-slicing-pricing"
version = "2.0.0"
description = "SLA-constrained dynamic pricing for 5G network slicing via constrained reinforcement learning (KIPS conference paper + journal extension)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Je-Mu Ryu" }]
dependencies = [
    "stable-baselines3>=2.3,<3",
    "gymnasium>=0.29",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools]
packages = ["src", "src.env", "src.train", "src.scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
